force-app/main/default/objects/AWB_Info__c/AWB_Info__c.object-meta.xml
<CustomObject>
    <label>AWB Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>AWB Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWB Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>