force-app/main/default/objects/AWB_Info__c/fields/Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status__c</fullName>
    <description>Capturing booking status in AWB Info object CRM - 9349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking Status</label>
    <length>210</length>
    <type>Text</type>
</CustomField>