force-app/main/default/objects/AWB_Info__c/fields/Collected_From_Terminal__c.field-meta.xml
<CustomField>
    <fullName>Collected_From_Terminal__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collected From Terminal</label>
    <type>DateTime</type>
</CustomField>