force-app/main/default/objects/AWB_Info__c/fields/Consignee__c.field-meta.xml
<CustomField>
    <fullName>Consignee__c</fullName>
    <description>New field created to capture Consignee from iCargo - CRM 9124</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Consignee</label>
    <length>50</length>
    <type>Text</type>
</CustomField>