force-app/main/default/objects/AWB_Info__c/fields/Flight_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Flight_Arrival__c</fullName>
    <description>Captures iCargo Flight Arrival Date and time where Milestone = Flight Landed .
Created for CRM-9349.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Arrival</label>
    <type>DateTime</type>
</CustomField>