force-app/main/default/objects/AWB_Info__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <description>New field created to capture Flight number from iCargo - CRM 9124</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>