force-app/main/default/objects/AWB_Info__c/fields/Freight_AWB_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Pieces__c</fullName>
    <description>Freight - Records the number of parcels associated with this AWB Number - CRM - 9349</description>
    <inlineHelpText>Freight: Manifested Pieces</inlineHelpText>
    <label>Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>