force-app/main/default/objects/AWB_Info__c/fields/Freight_AWB_Shipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Shipment_Description__c</fullName>
    <description>Freight - Used to record the shipment details associated with the AWB number entered
Created for CRM - 9349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>