force-app/main/default/objects/AWB_Info__c/fields/Freight_AWB_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Unit_Type__c</fullName>
    <description>Freight - Captures the unit type of the parcel associated with the AWB Number entered
Created for CRM - 9349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>