force-app/main/default/objects/AWB_Info__c/fields/Freight_AWB_Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Freight_AWB_Weight_Unit__c</fullName>
    <description>Freight - Captures the weight unit i.e. kg of the parcel associated with the AWB Number entered
Created for CRM - 9349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Weight Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>