force-app/main/default/objects/AWB_Info__c/fields/Freight_Origin__c.field-meta.xml
<CustomField>
    <fullName>Freight_Origin__c</fullName>
    <description>Freight - It used for AWB Integration, contains origin - CRM - 9349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>