force-app/main/default/objects/AWB_Info__c/fields/Freight_Weight__c.field-meta.xml
<CustomField>
    <fullName>Freight_Weight__c</fullName>
    <description>Freight - Weight Details for the AWB, Details fetching from AWB system.
Created for CRM - 9349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Weight</label>
    <length>20</length>
    <type>Text</type>
</CustomField>