force-app/main/default/objects/AWB_Info__c/fields/IsPortEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsPortEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable the port flag when AWB number is changed CRM- 8647, CRM - 9349</description>
    <label>IsPortEnabled</label>
    <type>Checkbox</type>
</CustomField>