force-app/main/default/objects/AWB_Info__c/fields/Pieces_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Pieces_Arrived__c</fullName>
    <description>Captures iCargo Piece + Unit where Milestone=Flight landed. CRM-9349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pieces Arrived</label>
    <length>255</length>
    <type>Text</type>
</CustomField>