force-app/main/default/objects/AWB_Info__c/fields/Pieces_for_Collection__c.field-meta.xml
<CustomField>
    <fullName>Pieces_for_Collection__c</fullName>
    <description>Captures iCargo Piece + Unit where Milestone=Ready for collection. CRM-9349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pieces for Collection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>