force-app/main/default/objects/AWB_Info__c/fields/Port_Override_Flag__c.field-meta.xml
<CustomField>
    <fullName>Port_Override_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow you to change the PORT different from what is in AWB# - CRM - 9349</description>
    <inlineHelpText>Allow you to change the PORT different from what is in AWB# - CRM - 9349</inlineHelpText>
    <label>Port Override Flag</label>
    <type>Checkbox</type>
</CustomField>