force-app/main/default/objects/AWB_Info__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>If with AWB#, value will be auto-refreshed from iCargo and will overwrite your manual entry.
CRM-9349</description>
    <inlineHelpText>If with AWB#, value will be auto-refreshed from iCargo and will overwrite your manual entry.</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accompanied Pets</fullName>
            </value>
            <value>
                <fullName>APG Freighter</fullName>
            </value>
            <value>
                <fullName>APG Must Fly</fullName>
            </value>
            <value>
                <fullName>APG NFP</fullName>
            </value>
            <value>
                <fullName>APG Premium</fullName>
            </value>
            <value>
                <fullName>Cargo - Client Airlines</fullName>
            </value>
            <value>
                <fullName>Priority One</fullName>
            </value>
            <value>
                <fullName>QF Other</fullName>
            </value>
            <value>
                <fullName>Q-GO Animals</fullName>
            </value>
            <value>
                <fullName>Q-GO Classic</fullName>
            </value>
            <value>
                <fullName>Q-GO DayPlus</fullName>
            </value>
            <value>
                <fullName>Q-GO DHL</fullName>
            </value>
            <value>
                <fullName>Q-GO Express</fullName>
            </value>
            <value>
                <fullName>Q-GO Fresh</fullName>
            </value>
            <value>
                <fullName>Q-GO Pets</fullName>
            </value>
            <value>
                <fullName>Q-GO Priority</fullName>
            </value>
            <value>
                <fullName>QGo-TGE</fullName>
            </value>
            <value>
                <fullName>Q-Go Toll</fullName>
            </value>
            <value>
                <fullName>Retail Class (Classic)</fullName>
            </value>
            <value>
                <fullName>Retail Fresh (Fresh)</fullName>
            </value>
            <value>
                <fullName>Retail PTY (Priority)</fullName>
            </value>
            <value>
                <fullName>Retail XPS (Express)</fullName>
            </value>
            <value>
                <fullName>Stores</fullName>
            </value>
            <value>
                <fullName>TNT FRTR</fullName>
            </value>
            <value>
                <fullName>Unaccompanied AVI</fullName>
            </value>
            <value>
                <fullName>Unaccompanied Pets</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>DHL FRTR</fullName>
            </value>
            <value>
                <fullName>QGO PRIORITY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>