force-app/main/default/objects/AWB_Info__c/fields/Ready_for_Collection__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Collection__c</fullName>
    <description>Capture Scheduled date and time where Milestone = Ready for Collection.
Created for CRM-9349</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ready for Collection</label>
    <type>DateTime</type>
</CustomField>