force-app/main/default/objects/AWB_Info__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <description>New field created to capture Reason Code from iCargo - CRM 9124</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>