force-app/main/default/objects/AWB_Info__c/fields/Shipper__c.field-meta.xml
<CustomField>
    <fullName>Shipper__c</fullName>
    <description>New field created to capture Shipper from iCargo - CRM 9124</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipper</label>
    <length>50</length>
    <type>Text</type>
</CustomField>