force-app/main/default/objects/AWB_Info__c/fields/SLA_Target__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target__c</fullName>
    <description>Difference between the two milestones.</description>
    <formula>ABS ((Flight_Arrival__c -  Ready_for_Collection__c) * 24 * 60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SLA_Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>