force-app/main/default/objects/AWB_Info__c/fields/Transit__c.field-meta.xml
<CustomField>
    <fullName>Transit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>